basic landing page template

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>FoodTune</title>
+    <script>
+      (function() {
+        try {
+          // Moraš koristiti isto ime ključa kao u ThemeContext (app-theme)
+          var savedTheme = localStorage.getItem('app-theme');
+          
+          if (savedTheme === 'dark') {
+            document.documentElement.setAttribute('data-theme', 'dark');
+          } else {
+            document.documentElement.setAttribute('data-theme', 'light');
+          }
+        } catch (e) {}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
